--- a/OnSSET_SDK.ipynb
+++ b/OnSSET_SDK.ipynb
@@ -27,9 +27,9 @@
         "<img src=\"https://www.ukaiddirect.org/images/logo.png\" height=\"70\" align=\"center\">\n",
         "\n",
         "# Welcome to the Starter Data Kit for `OnSSET`!\n",
-        "This notebook will help you to download the starter datasets needed to run a basic `OnSSET` analysis. It will allow you to download the geospatial data required as well as the socio- and techno-economic data of your country of interest.\n",
+        "This notebook will help you download the starter datasets needed to run a basic `OnSSET` analysis. It will allow you to download the geospatial data required as well as the socio- and techno-economic data of your country of interest. There different data sources and more will be added in future versions of the tool.\n",
         "\n",
-        "Please follow the steps below and choose the country and datasets to download."
+        "Please follow the steps below, settup the analysis and choose the country and datasets to download."
       ],
       "metadata": {
         "id": "NzHlKcYVfQfc"
@@ -37,50 +37,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
-        "id": "ybz0U1fqgOP9",
-        "outputId": "4601868f-1bcc-446f-b9af-8544b898471b",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 456
-        }
+        "id": "ybz0U1fqgOP9"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Successfully installed Flask-Caching-2.3.1 aniso8601-10.0.1 cachelib-0.13.0 color-operations-0.2.0 duckdb-1.4.4 eval-type-backport-0.3.1 flask-cors-6.0.2 flask-restx-1.3.2 geojson-3.2.0 ipyvue-1.12.0 ipyvuetify-1.11.3 jedi-0.19.2 leafmap-0.60.0 localtileserver-0.10.7 maplibre-0.3.6 morecantile-7.0.3 pystac-1.14.3 pystac-client-0.9.0 rio-cogeo-7.0.1 rio-tiler-8.0.5 server-thread-0.3.0 whitebox-2.3.6 whiteboxgui-2.3.0\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'ex' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/starterkits/utils.py\u001b[0m in \u001b[0;36mauthenticate_nasa_earth\u001b[0;34m(username, password)\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m             \u001b[0mearthaccess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpersistent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: login() got an unexpected keyword argument 'persistent'",
-            "\nDuring handling of the above exception, another exception occurred:\n",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-3403629240.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mglob\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m \u001b[0msdk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mauthenticate_nasa_earth\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mUsername\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mPassword\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Setup complete'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/starterkits/utils.py\u001b[0m in \u001b[0;36mauthenticate_nasa_earth\u001b[0;34m(username, password)\u001b[0m\n\u001b[1;32m     21\u001b[0m             \u001b[0mearthaccess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpersistent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m         \u001b[0;32mexcept\u001b[0m \u001b[0mex\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m            \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'No username or password provided for Nasa Earthaccess, the landcover and elevation data will be skiped.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m            \u001b[0;32mreturn\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'ex' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#%%capture\n",
-        "# @title Setup {\"vertical-output\":true,\"display-mode\":\"form\"}\n",
-        "# @markdown Run this cell for setting-up the connection to the database.\n",
-        "\n",
-        "# @markdown Setup the connection to NASA Earth data:\n",
-        "Username = \"camilorg@kth.se\" # @param {\"type\":\"string\",\"placeholder\":\"Enter NASA Earth username\"}\n",
-        "Password = \"LvWm!UdsD#K9u2L\" # @param {\"type\":\"string\",\"placeholder\":\"Enter NASA Earth password\"}\n",
-        "# Install boto3 and localtileserver if not already installed\n",
+        "# @title # Import required packages {\"vertical-output\":true,\"display-mode\":\"form\"}\n",
+        "# @markdown Run this cell to install all required packages and setup the session.\n",
+        "# @markdown > ⚠️ This may take several minutes.\n",
         "\n",
         "import subprocess\n",
         "from IPython.display import clear_output\n",
@@ -114,16 +81,35 @@
         "from tqdm.notebook import tqdm\n",
         "import glob\n",
         "\n",
-        "sdk.utils.authenticate_nasa_earth(Username, Password)\n",
-        "\n",
         "print('Setup complete')"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# @title Select datasets to download {\"run\":\"auto\",\"vertical-output\":true}\n",
-        "# @markdown Select the country to download data for:\n",
+        "# @title # Setup and select datasets {\"vertical-output\":true}\n",
+        "# @markdown ## Database connection\n",
+        "# @markdown ### NASA Earth database\n",
+        "# @markdown The Nasa Earth database is **required** to download landcover type MCD12Q1 data from the MODIS sensor,\n",
+        "# @markdown and elevation data (DEM) at different resolutions.\n",
+        "# @markdown You will need a username and a password from NASA Earth Data, please go to\n",
+        "# @markdown https://urs.earthdata.nasa.gov/home create a free account and fill the login credentials below.\n",
+        "NASA_username = \"\" # @param {\"type\":\"string\",\"placeholder\":\"Enter NASA Earth username\"}\n",
+        "NASA_password = \"\" # @param {\"type\":\"string\",\"placeholder\":\"Enter NASA Earth password\"}\n",
+        "\n",
+        "## @markdown ### OpenTopography database\n",
+        "## @markdown Digital Elevation Model data (DEM) can be downloaded from the OpenTopography\n",
+        "## @markdown project, for which you will need an API key. Please go to https://opentopography.org\n",
+        "## @markdown create a free account and generate an API key. Copy the key and paste it in the field below.\n",
+        "#Topo_API_key = \"\" # @param {\"type\":\"string\",\"placeholder\":\"Enter OpenTopography API key\"}\n",
+        "\n",
+        "## @markdown > ⚠️ **Note:** If you are using the NASA Earth database for Elevation data,\n",
+        "## @markdown you do not need to use OpenTopography.\n",
+        "\n",
+        "# @markdown ## Country and datasets selection\n",
+        "# @markdown In the dropdown below select the country of interest and several options will be\n",
+        "# @markdown displayed of posible datasets to download. Select which datasets and sources\n",
+        "# @markdown you want to use and click on the `download` button.\n",
         "\n",
         "# all road types\n",
         "all_road_types = [\n",
@@ -148,7 +134,7 @@
         "\n",
         "display(HTML(''' '''))\n",
         "\n",
-        "Country = \"BEN\" # @param [\"Select country\", 'AGO', 'BDI', 'BEN', 'BFA', 'BWA', 'CAF', 'CIV', 'CMR', 'COD', 'COG', 'DJI', 'ERI', 'ETH', 'GAB', 'GHA', 'GIN', 'GMB', 'GNB', 'GNQ', 'KEN', 'LBR', 'LSO', 'MDG', 'MLI', 'MOZ', 'MRT', 'MWI', 'NAM', 'NER', 'NGA', 'RWA', 'SDN', 'SEN', 'SLE', 'SOM', 'SSD', 'SWZ', 'TCD', 'TGO', 'TZA', 'UGA', 'ZAF', 'ZMB', 'ZWE']\n",
+        "Country = \"Select country\" # @param [\"Select country\", 'AGO', 'BDI', 'BEN', 'BFA', 'BWA', 'CAF', 'CIV', 'CMR', 'COD', 'COG', 'DJI', 'ERI', 'ETH', 'GAB', 'GHA', 'GIN', 'GMB', 'GNB', 'GNQ', 'KEN', 'LBR', 'LSO', 'MDG', 'MLI', 'MOZ', 'MRT', 'MWI', 'NAM', 'NER', 'NGA', 'RWA', 'SDN', 'SEN', 'SLE', 'SOM', 'SSD', 'SWZ', 'TCD', 'TGO', 'TZA', 'UGA', 'ZAF', 'ZMB', 'ZWE']\n",
         "# @markdown Choose the datasets to download in the optios below:\n",
         "\n",
         "box_layout = widgets.Layout(display='flex',\n",
@@ -243,26 +229,21 @@
         "    indent=False                             # Align with other controls with a description\n",
         ")\n",
         "\n",
-        "dem_description = widgets.HTML('Digital Model Data is downloaded from the ' +\n",
-        "                               'OpenTopography project, for which you need an API key. ' +\n",
-        "                               'Please go to https://opentopography.org create a ' +\n",
-        "                               'free account and generate an API key. Copy the ' +\n",
-        "                               'and paste it in the field below.', layout=Layout(width='700px'))\n",
+        "dem_description = widgets.HTML('Digital Elevation Model data (DEM), is used ' +\n",
+        "                                'to determine terrain slope, and both terrain ' +\n",
+        "                                'slope and elevation are used to specify grid extension suitability. ' +\n",
+        "                                'There are several sources available, but a `SRTMGL3` with ' +\n",
+        "                                'a resolution of ~90m is often enough, preventing ' +\n",
+        "                                'large computation times.', layout=Layout(width='700px'))\n",
         "\n",
         "dem_dropdown = widgets.Dropdown(\n",
         "    description='Dataset',\n",
-        "    options=['NASADEM'],\n",
+        "    options=sdk.apis.elevation_datasets['NASA'].keys(),\n",
+        "    value='SRTMGL3',\n",
         "    disabled=True\n",
         ")\n",
         "\n",
-        "dem_api = widgets.Text(\n",
-        "    value='',\n",
-        "    placeholder='Enter API key',\n",
-        "    description='API key:',\n",
-        "    disabled=True\n",
-        ")\n",
-        "\n",
-        "dem_box = VBox([dem_checkbox, dem_description, HBox([dem_dropdown, dem_api])])\n",
+        "dem_box = VBox([dem_checkbox, dem_description, HBox([dem_dropdown])])\n",
         "\n",
         "land_checkbox = widgets.Checkbox(\n",
         "    description='Land cover', # Label\n",
@@ -271,10 +252,10 @@
         "    indent=False\n",
         ")\n",
         "\n",
-        "land_description = widgets.HTML('Land Cover Data is downloaded from ' +\n",
-        "                               'Nasa Earth data, for which you need a user a password. ' +\n",
-        "                               'Please go to https://urs.earthdata.nasa.gov/home create a ' +\n",
-        "                               'free account and fill the login credentials.', layout=Layout(width='700px'))\n",
+        "land_description = widgets.HTML('Landcover data classifies land into 17 ' +\n",
+        "                                'specific categories. Different categories ' +\n",
+        "                                'imply different penalties on the grid extension.',\n",
+        "                                layout=Layout(width='700px'))\n",
         "\n",
         "land_dropdown = widgets.Dropdown(\n",
         "    description='Dataset',\n",
@@ -282,23 +263,7 @@
         "    disabled=True\n",
         ")\n",
         "\n",
-        "land_user = widgets.Text(\n",
-        "    value='',\n",
-        "    placeholder='Enter username',\n",
-        "    description='Username:',\n",
-        "    disabled=True\n",
-        ")\n",
-        "\n",
-        "land_password = widgets.Text(\n",
-        "    value='',\n",
-        "    placeholder='Enter password',\n",
-        "    description='password:',\n",
-        "    disabled=True\n",
-        ")\n",
-        "\n",
-        "land_box = VBox([land_checkbox, land_description, HBox([land_dropdown,\n",
-        "                                                        VBox([land_user,\n",
-        "                                                              land_password])])])\n",
+        "land_box = VBox([land_checkbox, land_description, HBox([land_dropdown])])\n",
         "\n",
         "ntl_checkbox = widgets.Checkbox(\n",
         "    description='Nighttime lights', # Label\n",
@@ -374,20 +339,14 @@
         "def on_dem_checkbox_changed(i):\n",
         "  if dem_checkbox.value:\n",
         "    dem_dropdown.disabled = False\n",
-        "    dem_api.disabled = False\n",
         "  else:\n",
         "    dem_dropdown.disabled = True\n",
-        "    dem_api.disabled = True\n",
         "\n",
         "def on_land_checkbox_changed(i):\n",
         "  if land_checkbox.value:\n",
         "    land_dropdown.disabled = False\n",
-        "    land_user.disabled = False\n",
-        "    land_password.disabled = False\n",
         "  else:\n",
         "    land_dropdown.disabled = True\n",
-        "    land_user.disabled = True\n",
-        "    land_password.disabled = True\n",
         "\n",
         "def on_ntl_checkbox_changed(i):\n",
         "  if ntl_checkbox.value:\n",
@@ -451,11 +410,14 @@
         "      pbar.update(1)\n",
         "      pbar.set_description(\"Downloading solar irradiation data\")\n",
         "    if dem_checkbox.value:\n",
-        "      sdk.apis.get_dem_data(Country)\n",
+        "      sdk.apis.get_dem_data(country=Country, database='Nasa Earth',\n",
+        "                            nasa_username=NASA_username, nasa_password=NASA_password,\n",
+        "                            dem_type=dem_dropdown.value)\n",
         "      pbar.update(1)\n",
         "      pbar.set_description(\"Downloading elevation model data\")\n",
         "    if land_checkbox.value:\n",
-        "      sdk.apis.get_landcover_data(country=Country)\n",
+        "      sdk.apis.get_landcover_data(country=Country,\n",
+        "                                  username=NASA_username, password=NASA_password)\n",
         "      pbar.update(1)\n",
         "      pbar.set_description(\"Downloading land cover data\")\n",
         "    if ntl_checkbox.value:\n",
@@ -499,7 +461,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title Delete country data {\"run\":\"auto\"}\n",
+        "# @title Delete country data\n",
         "# @markdown Run this cell to select a country to delete from the session.\n",
         "# # delete data for a country\n",
         "display(HTML('''<link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\"> '''))\n",
