--- a/OnSSET_SDK.ipynb
+++ b/OnSSET_SDK.ipynb
@@ -26,7 +26,7 @@
         "\n",
         "<img src=\"https://www.ukaiddirect.org/images/logo.png\" height=\"70\" align=\"center\">\n",
         "\n",
-        "# Welcome to the Starter Data Kit for `OnSSET`!\n",
+        "# 👋 Welcome to the Starter Data Kit for `OnSSET`!\n",
         "This notebook will help you download the starter datasets needed to run a basic `OnSSET` analysis. It will allow you to download the geospatial data required as well as the socio- and techno-economic data of your country of interest. There different data sources and more will be added in future versions of the tool.\n",
         "\n",
         "Please follow the steps below, settup the analysis and choose the country and datasets to download."
@@ -45,8 +45,8 @@
       "outputs": [],
       "source": [
         "#%%capture\n",
-        "# @title # Import required packages {\"vertical-output\":true,\"display-mode\":\"form\"}\n",
-        "# @markdown Run this cell to install all required packages and setup the session.\n",
+        "# @title # 📦 Import required packages {\"vertical-output\":true,\"display-mode\":\"form\"}\n",
+        "# @markdown Run this cell to install all required packages and setup the session by clicking on the run button (▶️) on the left corner of the cell.\n",
         "# @markdown > ⚠️ This may take several minutes.\n",
         "\n",
         "import subprocess\n",
@@ -87,15 +87,18 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title # Setup and select datasets {\"vertical-output\":true}\n",
-        "# @markdown ## Database connection\n",
-        "# @markdown ### NASA Earth database\n",
+        "# @title # 🛠️ Setup and select datasets {\"run\":\"auto\",\"vertical-output\":true}\n",
+        "# @markdown Run this cell to display the posible datasets to download for the OnSSET analysis.\n",
+        "# @markdown First fill the login information to the required databases and select\n",
+        "# @markdown the country of analysis, then click on the run botton (▶️) on the upper left corner.\n",
+        "# @markdown ## 🌐 Database connection\n",
+        "# @markdown ### 🛰️ NASA Earth database\n",
         "# @markdown The Nasa Earth database is **required** to download landcover type MCD12Q1 data from the MODIS sensor,\n",
         "# @markdown and elevation data (DEM) at different resolutions.\n",
         "# @markdown You will need a username and a password from NASA Earth Data, please go to\n",
         "# @markdown https://urs.earthdata.nasa.gov/home create a free account and fill the login credentials below.\n",
-        "NASA_username = \"\" # @param {\"type\":\"string\",\"placeholder\":\"Enter NASA Earth username\"}\n",
-        "NASA_password = \"\" # @param {\"type\":\"string\",\"placeholder\":\"Enter NASA Earth password\"}\n",
+        "NASA_username = \"camilorg@kth.se\" # @param {\"type\":\"string\",\"placeholder\":\"👤 Enter NASA Earth username\"}\n",
+        "NASA_password = \"LvWm!UdsD#K9u2L\" # @param {\"type\":\"string\",\"placeholder\":\"🔒 Enter NASA Earth password\"}\n",
         "\n",
         "## @markdown ### OpenTopography database\n",
         "## @markdown Digital Elevation Model data (DEM) can be downloaded from the OpenTopography\n",
@@ -106,10 +109,13 @@
         "## @markdown > ⚠️ **Note:** If you are using the NASA Earth database for Elevation data,\n",
         "## @markdown you do not need to use OpenTopography.\n",
         "\n",
-        "# @markdown ## Country and datasets selection\n",
+        "# @markdown ## 🌍 Country and datasets selection\n",
         "# @markdown In the dropdown below select the country of interest and several options will be\n",
         "# @markdown displayed of posible datasets to download. Select which datasets and sources\n",
         "# @markdown you want to use and click on the `download` button.\n",
+        "\n",
+        "# FIX SCROLLBAR: This tells Colab to expand the output area\n",
+        "output.eval_js('google.colab.output.setIframeHeight(0, true, {maxHeight: 2000})')\n",
         "\n",
         "# all road types\n",
         "all_road_types = [\n",
@@ -134,15 +140,27 @@
         "\n",
         "display(HTML(''' '''))\n",
         "\n",
-        "Country = \"Select country\" # @param [\"Select country\", 'AGO', 'BDI', 'BEN', 'BFA', 'BWA', 'CAF', 'CIV', 'CMR', 'COD', 'COG', 'DJI', 'ERI', 'ETH', 'GAB', 'GHA', 'GIN', 'GMB', 'GNB', 'GNQ', 'KEN', 'LBR', 'LSO', 'MDG', 'MLI', 'MOZ', 'MRT', 'MWI', 'NAM', 'NER', 'NGA', 'RWA', 'SDN', 'SEN', 'SLE', 'SOM', 'SSD', 'SWZ', 'TCD', 'TGO', 'TZA', 'UGA', 'ZAF', 'ZMB', 'ZWE']\n",
+        "Country = \"ETH\" # @param [\"Select country\", 'AGO', 'BDI', 'BEN', 'BFA', 'BWA', 'CAF', 'CIV', 'CMR', 'COD', 'COG', 'DJI', 'ERI', 'ETH', 'GAB', 'GHA', 'GIN', 'GMB', 'GNB', 'GNQ', 'KEN', 'LBR', 'LSO', 'MDG', 'MLI', 'MOZ', 'MRT', 'MWI', 'NAM', 'NER', 'NGA', 'RWA', 'SDN', 'SEN', 'SLE', 'SOM', 'SSD', 'SWZ', 'TCD', 'TGO', 'TZA', 'UGA', 'ZAF', 'ZMB', 'ZWE']\n",
         "# @markdown Choose the datasets to download in the optios below:\n",
         "\n",
-        "box_layout = widgets.Layout(display='flex',\n",
-        "                            flex_flow='column',\n",
-        "                            align_items='center',\n",
-        "                            width='100%')\n",
+        "box_layout = widgets.Layout(height='auto',\n",
+        "                            overflow='visible')\n",
         "\n",
         "# Create the widget\n",
+        "all_checkbox = widgets.Checkbox(\n",
+        "    description='Select all', # Label\n",
+        "    value=False,                            # Default value\n",
+        "    disabled=False,                         # Whether to disable user changes\n",
+        "    indent=False                             # Align with other controls with a description\n",
+        ")\n",
+        "\n",
+        "specs_checkbox = widgets.Checkbox(\n",
+        "    description='Socio-economic specifications', # Label\n",
+        "    value=False,                            # Default value\n",
+        "    disabled=False,                         # Whether to disable user changes\n",
+        "    indent=False                             # Align with other controls with a description\n",
+        ")\n",
+        "\n",
         "pop_checkbox = widgets.Checkbox(\n",
         "    description='Population count', # Label\n",
         "    value=False,                            # Default value\n",
@@ -214,13 +232,6 @@
         ")\n",
         "\n",
         "solar_box = VBox([solar_checkbox, HBox([solar_dropdown])])\n",
-        "\n",
-        "specs_checkbox = widgets.Checkbox(\n",
-        "    description='Socio-economic specifications', # Label\n",
-        "    value=False,                            # Default value\n",
-        "    disabled=False,                         # Whether to disable user changes\n",
-        "    indent=False                             # Align with other controls with a description\n",
-        ")\n",
         "\n",
         "dem_checkbox = widgets.Checkbox(\n",
         "    description='Elevation model', # Label\n",
@@ -308,6 +319,28 @@
         "                  layout=Layout(width='200px', height='30px'),\n",
         "                  button_style='primary')\n",
         "\n",
+        "def on_all_checkbox_changed(i):\n",
+        "  if all_checkbox.value:\n",
+        "    specs_checkbox.value = True\n",
+        "    pop_checkbox.value = True\n",
+        "    mv_checkbox.value = True\n",
+        "    wind_checkbox.value = True\n",
+        "    solar_checkbox.value = True\n",
+        "    dem_checkbox.value = True\n",
+        "    land_checkbox.value = True\n",
+        "    ntl_checkbox.value = True\n",
+        "    roads_checkbox.value = True\n",
+        "  else:\n",
+        "    specs_checkbox.value = False\n",
+        "    pop_checkbox.value = False\n",
+        "    mv_checkbox.value = False\n",
+        "    wind_checkbox.value = False\n",
+        "    solar_checkbox.value = False\n",
+        "    dem_checkbox.value = False\n",
+        "    land_checkbox.value = False\n",
+        "    ntl_checkbox.value = False\n",
+        "    roads_checkbox.value = False\n",
+        "\n",
         "def on_pop_checkbox_changed(i):\n",
         "  if pop_checkbox.value:\n",
         "    pop_dropdown.disabled = False\n",
@@ -363,6 +396,10 @@
         "    roads_types.disabled = True\n",
         "\n",
         "def on_download_clicked(i):\n",
+        "  if Country == 'Select country':\n",
+        "    print('Please select a country')\n",
+        "    return\n",
+        "\n",
         "  total_downloads = 1 # for boundaries\n",
         "\n",
         "  if specs_checkbox.value:\n",
@@ -384,55 +421,56 @@
         "  if roads_checkbox.value:\n",
         "    total_downloads += 1\n",
         "\n",
-        "  with tqdm(total=total_downloads, desc=\"Downloading datasets\") as pbar:\n",
+        "  with tqdm(total=total_downloads, desc=\"🔄 Downloading datasets\") as pbar:\n",
         "    sdk.apis.get_boundaries(Country)\n",
         "    pbar.update(1)\n",
-        "    pbar.set_description(\"Downloading boundaries\")\n",
+        "    pbar.set_description(\"🔄 Downloading boundaries\")\n",
         "\n",
         "    if specs_checkbox.value:\n",
         "      sdk.apis.get_specs(Country)\n",
         "      pbar.update(1)\n",
-        "      pbar.set_description(\"Downloading socio-economic specifications\")\n",
+        "      pbar.set_description(\"🔄 Downloading socio-economic specifications\")\n",
         "    if pop_checkbox.value:\n",
         "      sdk.apis.get_population_data(Country, pop_radio.value)\n",
         "      pbar.update(1)\n",
-        "      pbar.set_description(\"Downloading population data\")\n",
+        "      pbar.set_description(\"🔄 Downloading population data\")\n",
         "    if mv_checkbox.value:\n",
         "      sdk.apis.get_power_lines(Country)\n",
         "      pbar.update(1)\n",
-        "      pbar.set_description(\"Downloading medium voltage lines\")\n",
+        "      pbar.set_description(\"🔄 Downloading medium voltage lines\")\n",
         "    if wind_checkbox.value:\n",
         "      sdk.apis.get_wind_data(Country, wind_radio.value)\n",
         "      pbar.update(1)\n",
-        "      pbar.set_description(\"Downloading wind speed data\")\n",
+        "      pbar.set_description(\"🔄 Downloading wind speed data\")\n",
         "    if solar_checkbox.value:\n",
         "      sdk.apis.get_solar_data(Country)\n",
         "      pbar.update(1)\n",
-        "      pbar.set_description(\"Downloading solar irradiation data\")\n",
+        "      pbar.set_description(\"🔄 Downloading solar irradiation data\")\n",
         "    if dem_checkbox.value:\n",
         "      sdk.apis.get_dem_data(country=Country, database='Nasa Earth',\n",
         "                            nasa_username=NASA_username, nasa_password=NASA_password,\n",
         "                            dem_type=dem_dropdown.value)\n",
         "      pbar.update(1)\n",
-        "      pbar.set_description(\"Downloading elevation model data\")\n",
+        "      pbar.set_description(\"🔄 Downloading elevation model data\")\n",
         "    if land_checkbox.value:\n",
         "      sdk.apis.get_landcover_data(country=Country,\n",
         "                                  username=NASA_username, password=NASA_password)\n",
         "      pbar.update(1)\n",
-        "      pbar.set_description(\"Downloading land cover data\")\n",
+        "      pbar.set_description(\"🔄 Downloading land cover data\")\n",
         "    if ntl_checkbox.value:\n",
         "      sdk.apis.get_ntl_data(Country)\n",
         "      pbar.update(1)\n",
-        "      pbar.set_description(\"Downloading nighttime lights data\")\n",
+        "      pbar.set_description(\"🔄 Downloading nighttime lights data\")\n",
         "    if roads_checkbox.value:\n",
         "      sdk.apis.get_roads(Country) # , roads_types.value)\n",
         "      pbar.update(1)\n",
-        "      pbar.set_description(\"Downloading roads data\")\n",
-        "    print('\\033[1mData downloaded succesfully to session\\033[0m')\n",
+        "      pbar.set_description(\"🔄 Downloading roads data\")\n",
+        "    print('\\n\\033[1m✅ Data downloaded succesfully to session 🎉\\033[0m')\n",
         "\n",
         "hr = widgets.HTML(value=\"<hr>\")\n",
         "space = widgets.HTML(value=\"<br>\")\n",
         "\n",
+        "all_checkbox.observe(on_all_checkbox_changed, names='value')\n",
         "pop_checkbox.observe(on_pop_checkbox_changed, names='value')\n",
         "mv_checkbox.observe(on_mv_checkbox_changed, names='value')\n",
         "wind_checkbox.observe(on_wind_checkbox_changed, names='value')\n",
@@ -443,13 +481,9 @@
         "roads_checkbox.observe(on_roads_checkbox_changed, names='value')\n",
         "download.on_click(on_download_clicked)\n",
         "\n",
-        "# Display the widget\n",
-        "if Country != 'Select country':\n",
-        "  display(VBox([specs_checkbox, hr, pop_box, hr, mv_box, hr, wind_box, hr,\n",
+        "display(VBox([all_checkbox, hr, specs_checkbox, hr, pop_box, hr, mv_box, hr, wind_box, hr,\n",
         "                solar_box, hr, dem_box, hr, land_box, hr, ntl_box, hr, roads_box,\n",
-        "                space, download]))\n",
-        "else:\n",
-        "  print('Please select a country')\n"
+        "                space, download], layout=box_layout))\n"
       ],
       "metadata": {
         "id": "tjKveZd7QUAf",
@@ -461,8 +495,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title Delete country data\n",
+        "# @title # 🗑️ Delete country data\n",
         "# @markdown Run this cell to select a country to delete from the session.\n",
+        "# @markdown > ⚠️ If you downloaded data for a new country with the form above, you need to\n",
+        "# @markdown rerun this cell for it to appear in the dropdown.\n",
         "# # delete data for a country\n",
         "display(HTML('''<link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\"> '''))\n",
         "\n",
@@ -508,7 +544,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title Download data\n",
+        "# @title # 📥 Download data\n",
         "# @markdown Run this cell to download all files in the session to your computer.\n",
         "import os\n",
         "import zipfile\n",
