--- a/OnSSET_SDK.ipynb
+++ b/OnSSET_SDK.ipynb
@@ -80,6 +80,7 @@
         "import geopandas as gpd\n",
         "from tqdm.notebook import tqdm\n",
         "import glob\n",
+        "from google.colab import output\n",
         "\n",
         "print('Setup complete')"
       ]
@@ -97,8 +98,8 @@
         "# @markdown and elevation data (DEM) at different resolutions.\n",
         "# @markdown You will need a username and a password from NASA Earth Data, please go to\n",
         "# @markdown https://urs.earthdata.nasa.gov/home create a free account and fill the login credentials below.\n",
-        "NASA_username = \"camilorg@kth.se\" # @param {\"type\":\"string\",\"placeholder\":\"👤 Enter NASA Earth username\"}\n",
-        "NASA_password = \"LvWm!UdsD#K9u2L\" # @param {\"type\":\"string\",\"placeholder\":\"🔒 Enter NASA Earth password\"}\n",
+        "NASA_username = \"\" # @param {\"type\":\"string\",\"placeholder\":\"👤 Enter NASA Earth username\"}\n",
+        "NASA_password = \"\" # @param {\"type\":\"string\",\"placeholder\":\"🔒 Enter NASA Earth password\"}\n",
         "\n",
         "## @markdown ### OpenTopography database\n",
         "## @markdown Digital Elevation Model data (DEM) can be downloaded from the OpenTopography\n",
